--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -4,7 +4,7 @@
     .header{
         width: 100%;
         height: 60px;
-        padding: 0px 8px;
+        padding: 0px 16px;
         box-sizing: border-box;
         display: flex;
         flex-direction: row;
@@ -20,6 +20,23 @@
             text-decoration: none;
             color: #ff0088;
         }
+        .searchBox{
+            width: 50%;
+            input{
+                width: 100%;
+                padding: 12px 8px;
+                font-size: 18px;
+                font-weight: bold;
+                border-radius: 4px;
+                border: 1px solid #000;
+                background-color: #000;
+                outline: none;
+                color: #fff;
+            }
+        }
     }
 
+}
+.main{
+    min-height: 90vh;
 }
