styles for mobile view theme changing enhanced

--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -20,23 +20,34 @@
             text-decoration: none;
             color: #ff0088;
         }
-        .searchBox{
-            width: 50%;
-            input{
-                width: 100%;
-                padding: 12px 8px;
-                font-size: 18px;
-                font-weight: bold;
-                border-radius: 4px;
-                border: 1px solid #000;
-                background-color: #000;
-                outline: none;
-                color: #fff;
-            }
-        }
+        
     }
 
 }
+.searchBox{
+    width: 50%;
+    input{
+        width: 100%;
+        padding: 12px 8px;
+        font-size: 18px;
+        font-weight: bold;
+        border-radius: 4px;
+        border: 1px solid #000;
+        background-color: #000;
+        outline: none;
+        color: #fff;
+    }
+}
 .main{
     min-height: 90vh;
+}
+@media (max-width: 767px){
+    .searchBox{
+        input{
+            font-size: 12px;
+        }
+    }
+    .main{
+        padding-bottom: 60px;
+    }
 }
