--- a/components/ui/Player/player.module.scss
+++ b/components/ui/Player/player.module.scss
@@ -15,75 +15,84 @@ $controlBackground: #1D1D1D;
     position: fixed;
     bottom: 0px;
     color: #fff;
-    .progressBar{
-        width: 100%;
-        height: 8px;
-        background-color: $controlBackground;
-        box-sizing: border-box;
+}
+.progressBar{
+    width: 100%;
+    height: 8px;
+    background-color: $controlBackground;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+.audioControls{
+    min-height: 70px;
+    width: 100%;
+    box-sizing: border-box;
+    background-color: $controlBackground;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+}
+.audio{
+    display: none;
+}
+.playControls{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    .prevTrack{
+        width: 50px;
+        height: 50px;
+        @extend %flex-center;
         cursor: pointer;
     }
-    .audioControls{
-        min-height: 70px;
-        width: 100%;
-        box-sizing: border-box;
-        background-color: $controlBackground;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: flex-start;
-        .trackInfo{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: flex-start;
-            margin-left: 10%;
-            img{
-                height: 50px;
-            }
-            .artistInfo{
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                justify-content: center;
-                font-size: 12px;
-                color: #fff;
-                margin-left: 16px;
-                line-height: 20px;
-            }
-        }
-        .playControls{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: space-between;
-            .currentTime{
-                font-size: 12px;
-                display: inline-block;
-                width: 60px;
-            }
-            .prevTrack{
-                width: 50px;
-                height: 50px;
-                @extend %flex-center;
-                cursor: pointer;
-            }
-            .playTrack{
-                width: 50px;
-                height: 50px;
-                // background-color: $primaryColor;
-                @extend %flex-center;
-                cursor: pointer;
-            }
-            .nextTrack{
-                width: 50px;
-                height: 50px;
-                // background-color: $primaryColor;
-                @extend %flex-center;
-                cursor: pointer;
-            }
-        }
+    .playTrack{
+        width: 50px;
+        height: 50px;
+        // background-color: $primaryColor;
+        @extend %flex-center;
+        cursor: pointer;
     }
-    .audio{
+    .nextTrack{
+        width: 50px;
+        height: 50px;
+        // background-color: $primaryColor;
+        @extend %flex-center;
+        cursor: pointer;
+    }
+}
+.trackInfo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    margin-left: 10%;
+    img{
+        height: 50px;
+    }
+    .artistInfo{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: center;
+        font-size: 12px;
+        color: #fff;
+        margin-left: 16px;
+        line-height: 20px;
+    }
+}
+.currentTime{
+    font-size: 12px;
+    display: inline-block;
+    width: 60px;
+}
+@media (max-width: 767px){
+    .currentTime{
         display: none;
+    }
+    .audioControls{
+        flex-direction: row-reverse;
+        justify-content: flex-end;
     }
 }
