--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -1,17 +1,20 @@
+%header-style{
+    width: 100%;
+    height: 60px;
+    padding: 0px 16px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+    box-shadow: 1px 1px 4px 3px #000;
+}
 .container{
     height: 100vh;
     box-sizing: border-box;
     .header{
-        width: 100%;
-        height: 60px;
-        padding: 0px 16px;
-        box-sizing: border-box;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        background-color: #fff;
-        box-shadow: 1px 1px 4px 3px #000;
+        @extend %header-style;
         .logo{
             height: 32px;
             width: 32px;
@@ -20,33 +23,13 @@
             text-decoration: none;
             color: #ff0088;
         }
-        
     }
+}
 
-}
-.searchBox{
-    width: 50%;
-    input{
-        width: 100%;
-        padding: 12px 8px;
-        font-size: 18px;
-        font-weight: bold;
-        border-radius: 4px;
-        border: 1px solid #000;
-        background-color: #000;
-        outline: none;
-        color: #fff;
-    }
-}
 .main{
     min-height: 90vh;
 }
 @media (max-width: 767px){
-    .searchBox{
-        input{
-            font-size: 12px;
-        }
-    }
     .main{
         padding-bottom: 60px;
     }
