--- a/components/layout.module.scss
+++ b/components/layout.module.scss
@@ -1,6 +1,9 @@
 %header-style{
     width: 100%;
     height: 60px;
+    position: fixed;
+    top: 0;
+    z-index: 2;
     padding: 0px 16px;
     box-sizing: border-box;
     display: flex;
@@ -27,7 +30,12 @@
 }
 
 .main{
+    margin-top: 60px;
+    padding-bottom: 80px;
+    box-sizing: border-box;
     min-height: 90vh;
+    z-index: 0;
+    // overflow-y: scroll;
 }
 @media (max-width: 767px){
     .main{
