--- a/components/SongDetails/song-details.module.scss
+++ b/components/SongDetails/song-details.module.scss
@@ -13,7 +13,7 @@ $whiteSecondary: rgb(163, 159, 159);
     background-color: #000;
     padding: 16px 100px;
     box-sizing: border-box;
-    // transition: bottom 5s linear;
+    color: #fff;
 }
 .albumArt{
     float: left;
@@ -23,7 +23,6 @@ $whiteSecondary: rgb(163, 159, 159);
 }
 .songQueue{
     float: left;
-    color: #fff;
     margin-left: 100px;
     box-sizing: border-box;
     padding: 0 24px;
@@ -68,11 +67,26 @@ $whiteSecondary: rgb(163, 159, 159);
         justify-content: center;
         font-size: 12px;
         margin-left: 16px;
-        .title{
-            color: #fff;
-        }
         .artistName{
             color: whiteSecondary;
+        }
+    }
+}
+
+@media(max-width: 767px){
+    .container{
+        padding: 0px 8px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+    .songQueue{
+        display: none;
+    }
+    .albumArt{
+        img{
+            width: 300px;
         }
     }
 }
